src/assets/css/style.css
/* ... */
html {
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}

@font-face {
  font-family: CenturyGothic;
  src: url('/assets/fonts/CenturyGothic.ttf') format('ttf');
}

@font-face {
  font-family: CenturyGothic;
  src: url('/assets/fonts/CenturyGothicBold.ttf') format('ttf');
  font-weight: 700;
}

body {
  display: grid;
  grid-template-rows: auto 1fr auto;
  margin: 0;
  height: 100dvh;
  overflow-x: hidden;
  font-family: "Century Gothic", CenturyGothic, AppleGothic, Futura, sans-serif; 
  font-size: 1rem;
  line-height: 1.8;
  letter-spacing: var(--spacing-medium);
  background: var(--light);
  color: var(--blue);
}

img, svg {
  display: block;
  max-width: 100%;
}

img[width][height] {
  height: auto; /* Preserve aspect ratio */
}

input, button, textarea, select {
  font: inherit;
}

/* themed sections  */

.subpage_treatment-rooms {
  background: var(--mustard);
}

.subpage_treatment-rooms hr {
  border-color: rgba(255,255,255,0.3);
}

.subpage_food-and-drink hr {
  border-color: rgba(255,255,255,0.2);
}

body.subpage_our-rooms {
  background: var(--blue);
}

body.subpage_food-and-drink {
  background: var(--orange);
}

body.subpage_food-and-drink {
  background: var(--orange);
}

body.subpage {
  color: var(--white);
}

body.subpage footer, body.subpage footer a {
  color: var(--white);
}

body.subpage footer img[src$=".svg"] {
  filter: brightness(0) invert(1);
}

body.subpage footer, body.subpage footer::before, body.subpage .copyright {
  border-color: rgba(255,255,255,1);
}

body.subpage:not(.subpage_treatment-rooms) button {
  background: var(--white);
  color: var(--blue);  
}

body.subpage input {
  background: rgba(255,255,255,0.3);  
}

body.subpage_weddings {
  background: var(--lightblue);
  color: var(--light)
}

/* header */

body > header {
  padding: 0.5rem 1rem;
  background: var(--light);
  color: var(--blue);
  display: flex;
  flex-wrap: wrap;
  column-gap: 1rem;
}

body > header img {
  padding: 0.25rem;
}

.michelin {
  transform: rotate(4deg);
  max-height: 90px;
  position: absolute;
  right: 0;
  bottom: -1.5rem;
  z-index: 1;
  display: none;
}

nav {
  display: flex;
  align-items: center;
}

nav {
  position: absolute;
  top: 32px;
  right: 10px;  
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: var(--light);
  z-index: 1000;
  transition: 0.5s;
  flex-direction: column;
}

nav a {
  width: 100%;
}

nav ul {
  width: 100%;
}

nav ul {
  margin: 0;
  flex-direction: column;
  padding-top: 30px;
  /* overflow-x: scroll;
  flex-wrap: nowrap;   */
}

nav ul li {
  flex-shrink: 0;
}

nav ul li a {
  display: inline-block;
  padding: 0.375rem 0.75rem;
  padding: 1rem 2rem;
}

/* HAMBURGER MENU (for mobile) */
.hamburger {
  position: absolute;
  top: 16px;
  right: 0;
  background: none;
  border: none;
  outline: none;
  display: none;
  flex-direction: column;
  gap: 6px;
  cursor: pointer;
  z-index: 1002;
}

.hamburger div {
  width: 30px;
  height: 3px;
  background: var(--blue);
  transition: 0.3s;
}

.close-btn {
  position: absolute;
  top: 15px;
  right: 12px;
  z-index: 1002;
  display: none;
  font-size: 2rem;
  cursor: pointer;
  padding: 0 1rem;
  color: var(--blue);  
}  

.active {
  display: flex;
}

@media screen and (min-width: 900px) {
  .hamburger {
    display: none;
  }
  .michelin {
    display: block;
  }
  nav {
    display: flex;
    position: relative;
    flex-direction: row;
    width: auto;
  }
  nav ul {
    flex-direction: row;
    padding-top: 0;
  }
  nav ul .home {
    display: none;
  }

  nav ul li a {
    display: inline-block;
    width: auto;
    padding: 0.375rem 0.75rem;
  }
    .close-btn {
    display: none;
  }  
}

/* footer content */

.logo-address {
  display: inline-flex;
  align-items: center;
  gap: 1rem;
  text-align: left;
  text-transform: uppercase;
  padding: 1rem 3vw;
}

.copyright {
  border-top: double 7px var(--blue-tint);
  display: inline-flex;
  padding: 1rem 3vw;
  font-weight: normal;
}

.copyright a {
  text-decoration: underline;
}

.certification {
  display: flex;
  align-items: center;
  color: var(--michelin-red);
  font-weight: normal;
  margin: 1rem 0;
}

.certification p {
  text-align: left;
  margin-left: 0.5em;
}

.certification strong {
  display: block;
}

.certification img {
  max-height: 65px;
}

behold-widget {
  margin: 2rem 0;
}

.socials, .secondary {
  justify-content: center;
}

.secondary li {
  line-height: 2;
}

footer ul {
  column-gap: 1rem;
}

footer ul li p {
  margin: 0 .025rem;
}

/* main content */

body > main {
  display: grid;
  grid-template-columns:
  1fr
  min(90rem, 100%)
  1fr;
  /* border: 2px dashed green; */
}

body > main > *, .main_content > *  {
  grid-column: 2;
  /* border: 2px dashed PURPLE; */
}

.main_content {
  display: grid;
  grid-template-columns:
  1fr
  min(50rem, 100%)
  1fr;
  justify-self: center;
  /* border: 2px dashed red;   */
  width: 100%;
}

.full-bleed, body > main > header, body.subpage > main > header {
  width: 100%;
  grid-column: 1 / -1;
}

footer {
  display: grid;
  row-gap: 1rem;  
  margin: 1rem;
  max-width: 80em;
  justify-items: center;
  justify-self: center;
  font-size: var(--font-small);
  border-top: solid 4px var(--blue);
  position: relative;
}

footer::before {
  content: "";
  position: absolute;
  top: -16px;
  border-top: solid 4px var(--blue);
  left: 0;
  right: 0;
}

.page_home .content, .page .content {
  display: grid;
  row-gap: 1rem;
}

.subpage main button {
  width: 100%;
  display: block;
  font-size: 0.85em; 
}

@media screen and (min-width: 700px) {
  .subpage main button  {
    width: auto;
  }
}

button a {
  text-decoration: none;
}


.section-panel {
  display: grid;
  grid-template-columns: 1fr;
  margin-bottom: 2em;
}

.template_panel-image-background .section-panel p {
  text-align: justify;
  text-align-last: center;
  text-wrap: pretty;
}

.section-panel h2 {
  margin: 0;
}
/* ... */

